add get by id, update and delete product docs to swagger
